# Unbelievable_Sandbox_1

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/personal_manager/: cli.py  styles.tcss  tui.py
src/personal_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
